# MLforPeptideSynnthesis

./: README.md  pyproject.toml
.github/workflows/: tests.yaml
results/experiment_grid/: experiment_results.csv
results/old_test_results/: all_results.csv
results/old_test_results/new__shuffled__protected_fp__xgb/: results.json
results/old_test_results/new__whole__occurency__rff__regression/: results.json
results/old_test_results/new__whole__occurency__xgb__regression/: results.json
results/old_test_results/new__whole__positional_fp__rff/: results.json
results/old_test_results/new__whole__positional_fp__xgb/: results.json
results/old_test_results/new__whole__protected_fp__rff/: results.json
results/old_test_results/new__whole__protected_fp__rff__regression/: results.json
results/old_test_results/new__whole__protected_fp__xgb/: results.json
results/old_test_results/new__whole__protected_fp__xgb__regression/: results.json
results/old_test_results/new__whole__whole_fp__rff/: results.json
results/old_test_results/new__whole__whole_fp__xgb/: results.json
results/old_test_results/new__whole__whole_fp__xgb__regression/: results.json
results/old_test_results/new__wof__positional_fp__rff/: results.json
results/old_test_results/new__wof__positional_fp__xgb/: results.json
results/old_test_results/new__wof__protected_fp__rff/: results.json
results/old_test_results/new__wof__whole_fp__rff/: results.json
results/xgb/: results.json
scripts/: run_all_experiments.sh  run_hf_models.sh  run_sklearn_models.sh  run_sklearn_shuffled.sh  run_wof_sklearn.sh
(+238 files in other folders)
