[project]
name = "ai4agg"
version = "0.0.1"
description = "Describe your project here."
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Marvin Alberts", email = "marvin.alberts@ibm.com" }
]

dependencies = [
    "tqdm>=4.25.0",
    "accelerate>=1.0.1",
    "click>=8.1.7",
    "datasets>=2.19.2",
    "torch>=2.2.2",
    "transformers>=4.41.2",
    "scikit-learn>=1.5.2",
    "xgboost>=2.1.1",
    "torchmetrics>=1.5.1",
    "rdkit>=2024.3.5",
    "more-itertools>=10.5.0",
    "sktime>=0.34.0",
    "shap>=0.46.0",
    "matplotlib>=3.9.2"
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "mypy>=1.0.0",
    "pytest>=7.2.0",
    "pytest-cov>=2.8.1",
    "ruff>=0.1.3",
    "types-setuptools>=57.4.14"
]

[project.scripts]
create_combined_data = "ai4agg.cli.create_combined_dataset:main"
train_hf_model = "ai4agg.cli.train_hf_models:main"
train_sklearn_model = "ai4agg.cli.train_sklearn_models:main"
explain_model = "ai4agg.cli.explainability:main"
analyse_peptide = "ai4agg.cli.analyse_peptide:main"
run_experiment_grid = "ai4agg.cli.run_experiment_grid:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai4agg"]
include = [
    "src/ai4agg/py.typed",
    "src/ai4agg/modeling/resources/train_pipeline_configuration_example.yaml"
]